tests/NormalTests/paczka1/fuzzy1/84821156.err
Error in line 4: 5MKhlW S205 240,8
Error in line 1: LpS7RtBoGs S606 50,7
Error in line 11: LpS7RtBoGs A780 29,6
Error in line 9: 7d55OwFv S606 80,7
Error in line 12: LpS7RtBoGs S606 11,7
Error in line 13: 7d55OwFv S839 11,3
Error in line 18: 7d55OwFv S606 50,5
Error in line 20: 7d55OwFv S205 19,6
Error in line 17: 5MKhlW S839 21,3
Error in line 29: S205 A780 54,9
Error in line 38: I5ZI S606 52,9
